--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(untitled main.c utilities.h utilities.c)
+add_executable(untitled main.c utilities.h utilities.c tftpclient.c tftpclient.h)
